header z-index fix

--- a/web/www/src/components/Header/Header.module.css
+++ b/web/www/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
 @value faded, fontBody from tokens;
 
 .header {
-    z-index: 2;
+    z-index: 5;
     position: fixed;
     width: 100%;
     top: 0;
